# my-budgeting-app

./: .env.example  .gitignore  README.md  alembic.ini  docker-compose.yml  project_structure_script.py  pyproject.toml  requirements.txt
backend/: test_models.py  test_repositories.py
backend/alembic/: env.py
backend/alembic/versions/: 404938d37e51_initial_migration_create_categories_.py  7ddf1797f91c_initial_migration_create_categories_.py
backend/app/: config.py  database.py  main.py
backend/app/api/: deps.py
backend/app/api/v1/: __init__.py  accounts.py  categories.py  transactions.py
backend/app/core/: exceptions.py  logging.py
backend/app/models/: __init__.py  account.py  base.py  category.py  transaction.py
backend/app/repositories/: __init__.py  account.py  base.py  category.py  transaction.py
backend/app/schemas/: __init__.py  account.py  base.py  category.py  transaction.py
backend/app/services/: __init__.py  account.py  category.py  transaction.py
backend/tests/: conftest.py
docker/: backend.Dockerfile  frontend.Dockerfile
docs/: design-system.md  development.md
frontend/app/: config.py  main.py
frontend/app/components/base/: __init__.py  alert.py  badge.py  button.py  card.py  confirm_dialog.py  data_table.py  empty_state.py  input.py  loader.py  modal.py
frontend/app/components/custom/: __init__.py  color_picker.py  currency_input.py  icon_picker.py
frontend/app/layouts/: __init__.py  base_layout.py  sidebar.py
frontend/app/pages/: __init__.py  accounts.py  categories.py  dashboard.py  not_found.py  transactions.py
frontend/app/theme/: __init__.py  colors.py  spacing.py  styles.css  typography.py
frontend/app/utils/: __init__.py  api_client.py  formatters.py  notifications.py
frontend_nicegui/_modularization_example/: api_router_example.py  class_example.py  function_example.py  home_page.py  main.py  menu.py  theme.py
frontend_nicegui/app/: main.py
frontend_nicegui/shared/components/: header.py
